[gd_scene load_steps=12 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/Title.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/Start_Unselected.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/Start_Clicked.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/Start_Hovered.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/Credits_Unselected.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/Credits_Clicked.png" type="Texture" id=7]
[ext_resource path="res://assets/menu/Credits_Hovered.png" type="Texture" id=8]
[ext_resource path="res://assets/menu/Exit_Unselected.png" type="Texture" id=9]
[ext_resource path="res://assets/menu/Exit_Clicked.png" type="Texture" id=10]
[ext_resource path="res://assets/menu/Exit_Hovered.png" type="Texture" id=11]

[node name="HBoxContainer" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1068.0
margin_bottom = 750.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="Control" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 750.0
rect_min_size = Vector2( 64, 600 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Rect", "Size Flags", "Theme" ]

[node name="CenterContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.0
margin_right = 1068.0
margin_bottom = 750.0
rect_min_size = Vector2( 500, 600 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Size Flags" ]

[node name="TextureRect" type="TextureRect" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1000.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Size Flags" ]

[node name="TextureButton" type="TextureButton" parent="CenterContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 142.0
margin_right = 1000.0
margin_bottom = 342.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="TextureButton2" type="TextureButton" parent="CenterContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 346.0
margin_right = 1000.0
margin_bottom = 546.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="TextureButton3" type="TextureButton" parent="CenterContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 550.0
margin_right = 1000.0
margin_bottom = 750.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
_sections_unfolded = [ "Rect", "Size Flags" ]

[connection signal="button_down" from="CenterContainer/TextureButton" to="." method="_on_start_button_down"]

[connection signal="button_down" from="CenterContainer/TextureButton2" to="." method="_on_credits_down"]

[connection signal="button_down" from="CenterContainer/TextureButton3" to="." method="_on_exit_button_down"]


